--- a/mysite/authorization/templates/authorization/sign in.html
+++ b/mysite/authorization/templates/authorization/sign in.html
@@ -45,7 +45,7 @@
             <a href="/registration">Регистрация</a>
           </div>
           <div class="div4">
-            <a href="#">Забыли пароль?</a>
+            <a href="/forgotpassword">Забыли пароль?</a>
           </div>
         </div>
       </div>
