Добавлены всплывающие окна с информацией

--- a/mysite/authorization/templates/authorization/forgotpassword.html
+++ b/mysite/authorization/templates/authorization/forgotpassword.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <div class="macbook-air-9">
+
+      {{ message|safe }}
+
       <div class="rectangle-parent">
         <div class="frame-child"></div>
         <div class="parent">
@@ -24,11 +27,13 @@
             src="{% static 'authorization/image/twitter_header_photo_2fds 1.svg' %}"
           />
         </div>
+        <form method="POST">
+          {% csrf_token %}
         <div class="input-groupemail">
-          <input required="" type="text" name="text" autocomplete="off" class="input">
+          <input required="" type="text" name="email" autocomplete="off" class="input">
           <label class="user-label">Электронная почта</label>
         </div>
-        <button class="buttonsending">
+        <button class="buttonsending" name = "smsemail" type = "submit">
           <div class="div1">Отправить</div>
         </button>
         <div class="container">
@@ -36,6 +41,7 @@
             <a href=".">Страница входа</a>
           </div>
         </div>
+        </form>
         <div class="email1">
           Укажите свой email, под которым вы регистрированы на сайте и на него
           будет отправлен временный пароль и информация по восстановлению пароля
