--- a/mysite/authorization/static/authorization/css/indexforgotpassword.css
+++ b/mysite/authorization/static/authorization/css/indexforgotpassword.css
@@ -191,3 +191,53 @@
     box-shadow: none;
     transform: scale(0.95);
   }
+
+
+  .textmessage {
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    width: 358px;
+    height: 29px;
+    }
+  
+  .error {
+    position: relative;
+    top: calc(50% - 300px);
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    background-color: #f69595;
+    border: 3px solid #ff5f5f;
+    box-sizing: border-box;
+    width: 400px;
+    height: 49px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 20px;
+    color: #004858;
+    font-family: Roboto;
+  }
+
+  .complete {
+    position: relative;
+    top: calc(50% - 300px);
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    background-color: #95F6AA;
+    border: 3px solid #5FFF8B;
+    box-sizing: border-box;
+    width: 400px;
+    height: 49px;
+    overflow: hidden;
+    text-align: center;
+    font-size: 20px;
+    color: #004858;
+    font-family: Roboto;
+  }
