--- a/mysite/authorization/static/authorization/css/indexsignin.css
+++ b/mysite/authorization/static/authorization/css/indexsignin.css
@@ -246,4 +246,32 @@
 }
 
 
+.textmessage {
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 358px;
+  height: 29px;
+  }
 
+.error {
+  position: relative;
+  top: calc(50% - 300px);
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  background-color: #f69595;
+  border: 3px solid #ff5f5f;
+  box-sizing: border-box;
+  width: 400px;
+  height: 49px;
+  overflow: hidden;
+  text-align: center;
+  font-size: 20px;
+  color: #004858;
+  font-family: Roboto;
+}
