--- a/mysite/authorization/static/authorization/css/indexsignup.css
+++ b/mysite/authorization/static/authorization/css/indexsignup.css
@@ -16,23 +16,11 @@
   width: 400px;
   height: 49px;
 }
-.social-icons {
-  position: absolute;
-  top: 9px;
-  left: 39px;
-  width: 30px;
-  height: 30px;
-  overflow: hidden;
-}
-.google {
-  position: absolute;
-  top: 12px;
-  left: 100px;
-  }
+
+
 
 .div1,
-.buttonsignup,
-.buttongoogle {
+.buttonsignup{
     position: absolute;
   }
 
@@ -51,32 +39,12 @@
     height: 49px;
   }
 
-.buttongoogle {
-    color: #ffffff;
-    font-weight: Bold;
-  
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    background-color: var(--color-mediumturquoise);
-    top: 154px;
-    left: 15px;
-    border-radius: var(--br-8xs);
-    width: 400px;
-    height: 49px;
-    text-align: center;
-    font-size: 20px;
-    font-family: var(--font-roboto);
-    font-weight: 400;
-  }
-.buttongoogle:hover,
 .buttonsignup:hover {
   background-color: #68C5B9;
   box-shadow: 0 0 20px #6fc5ff50;
   transform: scale(1.01);
 }
 
-.buttongoogle:active,
 .buttonsignup:active {
   background-color: #5CADA3;
   transition: all 0.25s;
@@ -87,17 +55,17 @@
 
 .input-groupreg {
   position: relative;
-  top: 226px;
+  top: 200px;
  }
 
  .input-grouppastwo {
   position: relative;
-  top: 270px;
+  top: 244px;
  }
 
  .input-grouppas {
   position: relative;
-  top: 248px;
+  top: 222px;
  }
  
  .input {
@@ -133,7 +101,7 @@
 
 .div {
   position: absolute;
-  top: 105px;
+  top: 120px;
   left: 45px;
   font-weight: 500;
   display: inline-block;
